--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 <body>
     
     <div class="container">
+
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>fechar</span>
+        </div>
+
         <header>
             <div class="img-wrapper">
                 <img src="Imagens/bg.jpg" alt="">
@@ -23,7 +31,27 @@
                 <button>Saiba mais</button>
             </div>
         </header>
+
+        <div class="sidebar">
+            <nav>
+                <ul class="menu"> <!-- div.sidebar>nav>ul.menu>(li.menu-item>a.menulink)*5 -->
+                    <li class="menu-item"><a href="#" class="menu-link">HOME</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-github-alt"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+
     </div>
 
 </body>
+
+<script src="script.js"></script>
 </html>
