pachage: Criada a sessão Conhecimentos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </header>
 
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu"> <!-- div.sidebar>nav>ul.menu>(li.menu-item>a.menulink)*5 -->
                     <li class="menu-item"><a href="#" class="menu-link">HOME</a></li>
@@ -47,7 +47,72 @@
                 <a href="#"><i class="fab fa-github-alt"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-        </div>
+        </aside>
+
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum excepturi eveniet iste quae consequatur quod suscipit nesciunt recusandae exercitationem, pariatur odio eius id incidunt nihil soluta! Repellat iste nostrum asperiores.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolor soluta et. Quam ipsa omnis rem doloremque, autem debitis maxime adipisci molestias, dolor aspernatur minima! Quos hic excepturi amet ab?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum alias illum ipsa deleniti sint. Quidem voluptatibus veniam explicabo deleniti assumenda voluptates atque nihil, delectus temporibus, adipisci libero excepturi voluptatem obcaecati.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum alias illum ipsa deleniti sint. Quidem voluptatibus veniam explicabo deleniti assumenda voluptates atque nihil, delectus temporibus, adipisci libero excepturi voluptatem obcaecati.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum alias illum ipsa deleniti sint. Quidem voluptatibus veniam explicabo deleniti assumenda voluptates atque nihil, delectus temporibus, adipisci libero excepturi voluptatem obcaecati.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github-alt"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum alias illum ipsa deleniti sint. Quidem voluptatibus veniam explicabo deleniti assumenda voluptates atque nihil, delectus temporibus, adipisci libero excepturi voluptatem obcaecati.</p>
+                    </div>
+                </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="Imagens/conhecimentos.png" alt="">
+                </div>
+            </div>
+        </section>
 
     </div>
 
