--- a/index.html
+++ b/index.html
@@ -114,6 +114,48 @@
             </div>
         </section>
 
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj1.jpg">
+                    </div>
+                        <div class="card-info">
+                            <h2>ToDo List</h2>
+                            <h3>Javascript</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit, voluptatem fugiat, sint quibusdam deserunt harum, odio natus cupiditate ipsum autem excepturi illum odit beatae. Animi totam dolores officiis ratione!</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                </div>
+                    <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj2.jpg">
+                    </div>
+                        <div class="card-info">
+                            <h2>Maratona</h2>
+                            <h3>HTML, CSS</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eos quis odit officiis tempora dignissimos optio? Sapiente saepe in nostrum nemo unde. Rerum non voluptatum sed quidem obcaecati, rem ullam?</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj3.jpg">
+                    </div>
+                        <div class="card-info">
+                            <h2>Casa Bela</h2>
+                            <h3>HTML</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nemo fugiat aut, commodi ea pariatur sequi at eligendi atque tempora, est quidem nobis doloremque id numquam repellat, inventore obcaecati aspernatur.</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
 
 </body>
