--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <h2>ToDo List</h2>
                             <h3>Javascript</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit, voluptatem fugiat, sint quibusdam deserunt harum, odio natus cupiditate ipsum autem excepturi illum odit beatae. Animi totam dolores officiis ratione!</p>
-                            <button>Saiba Mais</button>
+                            <button class="btn">Saiba Mais</button>
                         </div>
                 </div>
                     <div class="card">
@@ -138,7 +138,7 @@
                             <h2>Maratona</h2>
                             <h3>HTML, CSS</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eos quis odit officiis tempora dignissimos optio? Sapiente saepe in nostrum nemo unde. Rerum non voluptatum sed quidem obcaecati, rem ullam?</p>
-                            <button>Saiba Mais</button>
+                            <button class="btn">Saiba Mais</button>
                         </div>
                     </div>
                 <div class="card">
@@ -149,9 +149,33 @@
                             <h2>Casa Bela</h2>
                             <h3>HTML</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nemo fugiat aut, commodi ea pariatur sequi at eligendi atque tempora, est quidem nobis doloremque id numquam repellat, inventore obcaecati aspernatur.</p>
-                            <button>Saiba Mais</button>
+                            <button class="btn">Saiba Mais</button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sessao-contato">
+            <div class="contato-wrapper">
+                <div class="contato-left"></div>
+                <div class="contato-right">
+                    <h1>Contato</h1>
+                    <form>
+                        <div class="imput-group">
+                            <input type="text" class="field" id="nome">
+                            <label for="nome" class="field-label">Nome</label>
+                        </div>
+                        <div class="imput-group">
+                            <input type="text" class="field" id="email">
+                            <label for="email" class="field-label">E-mail</label>
+                        </div>
+                        <div class="imput-group">
+                            <textarea class="field" id="mensagem"></textarea>
+                            <label for="mensagem" class="field-label">Mensagem</label>
+                        </div>
+                        <button type="submit" class="btn-submit btn">Enviar</button>
+                    </form>
                 </div>
             </div>
         </section>
