--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
                             <label for="layout-nao">Já tenho um layout</label>
                         </div>
                     </div>
-                    <input type="range" name="prazo" id="prazo">
+                    <label for="prazo">Prazo</label>
+                    <input type="range" name="prazo" id="prazo" min="1" max="10">
+                    <label id="preco">R$ 0,00</label>
                     <button class="btn btn-orcamento" type="submit">Enviar</button>
                 </form>
             </div>
